master

1.0.22
- Zixaphir
  Fix embedding in inlined posts
  Fix options menu on Chrome

1.0.21
- Zixaphir
  Fixed QR not refreshing properly
  Some fixes to the catalogy

1.0.20
- Zixaphir
  Typo

1.0.19
- noface
  Added Catalog Links toggle.
  Exclude 4chan x from executing on catalogs.
  Added Link Title for Youtube links.
  Added Ban Checker.
- Zixaphir
  Fix #optionsbar height
  'Mascot Position' is now an override.
  Fix undeleting
  Switched a lot of pixel metrics to "em"s.
  Fix thread and reply navigation link vertical alignments and size
  Better mascot positioning
  Select inputs are now implemented in HTML and JS rather than left to the user agent.
  Button elements are now styled.
  Added an advertisement for Appchan's mascot booru.
  Style catalog
  New Options:
  - Custom CSS (with examples)
  - Single Column mode
  - Reset Custom Navigation
  Removed:
  - Manual Icon Positioning (was broken anyways)
  - Manual selection of theme luminance

1.0.18
- Fix "Hide Show Post Form" doing opposite of what it said it did.

1.0.17
- Mayhem
  Fix next/previous page keybinds.
- noface
  Improved checking for own post directly after posting. This should sort out a number of small hiccups.
  Fixed crossquotes not showing the correct archiver.
  Added support for posting with QR and tags on /f/.
  Added redirection for /c/ and /po/.
  Added keybinds for math and eqn tags on /sci/.
  Added full image redirection to /mu/.
  Removed ArchiveLink redirection from /soc/ (URLs will still be redirected).
  Quick tags won't be inserted where not possible anymore (like spoilers on /g/).
  Added support for coloured IDs and post highlighting from the native 4chan extension.
  Improved Linkifier to be much lighter.
  Embedding:
    - Adds support for SoundCloud, Vocaroo, mp3/ogg/wav files.
    - Adds a menu button 'Embed all in post'.
- Zixaphir
  Settings editor now applies changes on setting change
    (when you unfocus the text input on text inputs)