@@ -1,4 +1,6 @@
 master
+- noface
+  Added liveleak embedding and Vimeo Link Title.
 
 1.0.22
 - Zixaphir
